--- a/src/main/resources/templates/first/hello.html
+++ b/src/main/resources/templates/first/hello.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Hello</title>
@@ -7,5 +7,7 @@
 <body>
 Hello!
 <a href="/goodbye">Say goodbye</a> or <a href="/exit">Exit</a>
+<a href="/first/hello?name=Tom&surname=Holland">Request with parameters</a>
+<p th:text="${message}"></p>
 </body>
 </html>
